--- a/style.css
+++ b/style.css
@@ -4,50 +4,74 @@
 	padding: 0;
 }
 
-html {font-size: 100%;} /*16px*/
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,600");
 
-body {
-  background: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 500;
-  line-height: 1.75;
-  color: #000000;
+html {
+	font-size: 100%; /*16px*/
 }
 
-h1, h2, h3, h4, h5 {
-  margin: 3rem 0 1.38rem;
-  font-weight: 600;
-  line-height: 1.3;
+body {
+	background: white;
+	font-family: "Roboto", sans-serif;
+	font-weight: 400;
+	line-height: 1.75;
+	color: #000000;
+}
+
+p {
+	margin-bottom: 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	margin: 3rem 0 1.38rem;
+	font-weight: 400;
+	line-height: 1.3;
+	text-align: center;
 }
 
 h1 {
-  margin-top: 0;
-  font-size: 3.052rem;
+	margin-top: 0;
+	font-size: 3.052rem;
 }
 
-h2 {font-size: 2.441rem;}
+h2 {
+	font-size: 2.441rem;
+}
 
-h3 {font-size: 1.953rem;}
+h3 {
+	font-size: 1.953rem;
+}
 
-h4 {font-size: 1.563rem;}
+h4 {
+	font-size: 1.563rem;
+}
 
-h5 {font-size: 1.25rem;}
+h5 {
+	font-size: 1.25rem;
+}
 
-small, .text_small {font-size: 0.8rem;}
+small,
+.text-small {
+	font-size: 0.8rem;
+}
 
 html,
-body
-{
+body,
+main {
 	width: 100%;
+	height: 100%;
 }
 
 main {
-	/* height: calc(100vh - 25rem); */
-    padding: 2rem;
+	padding: 1rem;
 }
 
 footer {
-	padding: 2rem ;
+	padding: 2rem;
 	background-color: #461462;
 	display: flex;
 	flex-direction: column;
@@ -55,7 +79,7 @@ footer {
 	align-items: center;
 	color: white;
 	gap: 2.5rem;
-    width: 100%;
+	/* width: 100%; */
 }
 
 a {
@@ -82,9 +106,9 @@ footer li {
 }
 
 .socials {
-    background-color: rgb(101, 82, 255, 0.4);
-    border-radius: 50rem;
-    padding: .5rem 2.5rem;
+	background-color: rgb(101, 82, 255, 0.4);
+	border-radius: 50rem;
+	padding: 0.5rem 2.5rem;
 }
 
 .socials ul {
@@ -103,97 +127,92 @@ img {
 	height: auto;
 }
 
-.block_container, .block p  {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.block_container,
+.block p {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .block p {
-    height: 100%;
-    color: white;
-    font-size: 2.1rem;
-    font-weight: 400;
+	height: 100%;
+	color: white;
+	font-size: 2.2rem;
+	font-weight: 500;
 }
 
 .block {
-    margin: 4rem;
-    min-width: 12rem;
-    height: 7rem;
-    border-radius: 12px;
+	margin: 1.75rem;
+	min-width: 14rem;
+	height: 8rem;
+	border-radius: 12px;
 }
 
 .orange {
-    background-color: #ED7D31;
+	background-color: #ed7d31;
 }
 
 .red {
-    background-color: #C00000;
+	background-color: #c00000;
 }
 
 .blue {
-    background-color: #496fb2;
+	background-color: #496fb2;
 }
 
 .green {
-    background-color: #02a44b;
+	background-color: #02a44b;
 }
 
 .full-arrow-right {
-    display: flex;
+	display: flex;
 }
 
-/* .full-arrow-down {
-    display: block;
-} */
+.d-md-none {
+	display: none;
+}
+
+.arrow-right {
+	border-left: 35px solid #bac3dc;
+	border-top: 28px solid transparent;
+	border-bottom: 35px solid transparent;
+	border-left-width: 28px;
+
+	/* width: 0;
+	height: 0; */
+	margin: -10.5px 0 0 0;
+}
+
+.arrow-down {
+	border: 35px solid transparent;
+	border-top-color: #bac3dc;
+	border-top-width: 28px;
+	border-bottom: 0px;
+}
 
 .horizontal {
-    display: block;
-    width: 35px;
-    height: 35px;
-    background-color: #97a1bd;
+	display: block;
+	background-color: #bac3dc;
 }
-.arrow-right {
-    border-left: 30px solid #97a1bd;
-    border-top: 30px solid transparent;
-    border-bottom: 30px solid transparent;
-    width: 0; 
-    height: 0; 
-    margin: -12px 0 0 0;
+
+.full-arrow-right > .horizontal {
+	width: 30px;
+	height: 39px;
 }
 
 .full-arrow-down > .horizontal {
-    display: block;
-    width: 35px;
-    height: 35px;
-    background: #97a1bd;
-    margin: auto;
-}
-  .arrow {
-    display: block;
-    width: 0px;
-    height: 0px;
-    border:35px solid transparent;
-  }
-
-  .arrow.arrow-down {
-    border-top-color: #97a1bd;
-    border-bottom-width: 0px;
-  }
-
-
-
-.d-md-none {
-    display: none;
+	margin: auto;
+	width: 42px;
+	height: 25px;
 }
 
 /* RESPONSIVE - mobile L */
 @media screen and (min-width: 425px) {
-    .block {
-        width: 18rem;
-        height: 10rem;
-    }
+	.block {
+		width: 18rem;
+		height: 10rem;
+	}
 }
 
 /* RESPONSIVE - Tablet */
@@ -204,24 +223,17 @@ img {
 		justify-content: space-around;
 		height: 15rem;
 	}
-
-	main {
-		height: calc(100vh - 15rem);
-	}
-
-    
 }
 
 /* RESPONSIVE - small PC */
 @media screen and (min-width: 1024px) {
+	.block_container {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
 
-    .block_container {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .d-md-none {
-        display: flex;
-    }
-
+	.d-md-none {
+		display: flex;
+	}
 }
