--- a/style.css
+++ b/style.css
@@ -4,10 +4,51 @@
 	padding: 0;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,600");
+/* BACK TO TOP BUTTON */
+#toTop {
+	position: fixed;
+	bottom: 50px;
+	right: 10px;
+	border-radius: 50%;
+	background-color:	#7a49a5;
+	z-index: 2;
+	width: 50px;
+	height: 50px;
+	opacity: 0.45;
+	transition: background-color 0.5s, opacity 0.5s;
+	border-style: none;
+}
+
+#toTop:hover {
+	background-color: #146246;
+	opacity: 0.65;
+}
+
+#toTop:active {
+	background-color: 	#4974a5;
+	opacity: 0.9;
+	transition: background-color 0s, opacity 0s;
+}
+
+/* ICON ARROW UP */
+#toTop::after {
+	content: "\f062";
+	font-family: FontAwesome;
+	color: #fff;
+}
+
+/* responsive */
+@media (min-width: 768px) {
+	#toTop {
+		right: 30px;
+		bottom: 50px;
+	}
+}
+/* ---- END BACK TO TOP */
 
 html {
 	font-size: 100%; /*16px*/
+    scroll-behavior: smooth;
 }
 
 body {
@@ -28,13 +69,12 @@ h3,
 h4,
 h5 {
 	margin: 3rem 0 1.38rem;
-	font-weight: 400;
 	line-height: 1.3;
+	font-weight: 300;
 	text-align: center;
 }
 
 h1 {
-	margin-top: 0;
 	font-size: 3.052rem;
 }
 
@@ -60,14 +100,15 @@ small,
 }
 
 html,
-body,
-main {
+body {
 	width: 100%;
 	height: 100%;
 }
 
 main {
 	padding: 1rem;
+	/* flex: 1; */
+	min-height: 100vh;
 }
 
 footer {
@@ -79,7 +120,10 @@ footer {
 	align-items: center;
 	color: white;
 	gap: 2.5rem;
-	/* width: 100%; */
+}
+
+footer p {
+	font-weight: 500;
 }
 
 a {
@@ -116,6 +160,10 @@ footer li {
 	flex-direction: row;
 }
 
+.socials p {
+	margin-bottom: 0;
+}
+
 picture {
 	min-width: 8rem;
 	width: 10rem;
@@ -127,23 +175,35 @@ img {
 	height: auto;
 }
 
+.container {
+	padding: 1rem;
+	height: 100em;
+}
+
 .block_container,
 .block p {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
+}
+
+.block_container {
+	/* margin-top: 13%; */
+     position: relative;
+  top: 15%;
+  transform: translateY(-15%);
 }
 
 .block p {
 	height: 100%;
 	color: white;
-	font-size: 2.2rem;
-	font-weight: 500;
+	font-size: 2.6rem;
+	justify-content: center;
 }
 
 .block {
-	margin: 1.75rem;
+	margin: 1.75rem 0;
+    margin-left: 0;
 	min-width: 14rem;
 	height: 8rem;
 	border-radius: 12px;
@@ -167,6 +227,7 @@ img {
 
 .full-arrow-right {
 	display: flex;
+    margin: 0 1.75rem ;
 }
 
 .d-md-none {
@@ -178,9 +239,6 @@ img {
 	border-top: 28px solid transparent;
 	border-bottom: 35px solid transparent;
 	border-left-width: 28px;
-
-	/* width: 0;
-	height: 0; */
 	margin: -10.5px 0 0 0;
 }
 
@@ -210,8 +268,8 @@ img {
 /* RESPONSIVE - mobile L */
 @media screen and (min-width: 425px) {
 	.block {
-		width: 18rem;
-		height: 10rem;
+		width: 15rem;
+		height: 8.75rem;
 	}
 }
 
@@ -223,10 +281,23 @@ img {
 		justify-content: space-around;
 		height: 15rem;
 	}
+
+	h1 {
+		font-size: 3.5rem;
+	}
 }
 
 /* RESPONSIVE - small PC */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1130px) {
+	.container {
+		padding: 4rem 8rem 0;
+		height: 100em;
+	}
+
+	h1 {
+		text-align: inherit;
+	}
+
 	.block_container {
 		display: flex;
 		flex-direction: row;
